# alphabet-rs

./: Cargo.toml  README.md  cargo.toml  keymap.toml
src/: main.rs
src/plugins/: audio.rs  keymap.rs  loader.rs  mod.rs  text.rs
